--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,3 +1,10 @@
 ENV=dev
+PORT=80
+CLIENT_ORIGIN='*'
 DATA_STREAM_HOST=localhost
 DATA_STREAM_PORT=8000
+DB_HOST=localhost
+DB_PORT=3306
+DB_NAME=
+DB_USER=
+DB_PASS=
