--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
 		"start": "node dist/index.js",
 		"build": "tsc",
 		"dev": "nodemon --config nodemon.json src/index.ts",
-		"clean": "rimraf build logs"
+		"clean": "rimraf build logs",
+		"typeorm": "typeorm-ts-node-commonjs"
 	},
 	"devDependencies": {
 		"@types/node": "^20.2.4",
@@ -20,8 +21,12 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"class-validator": "^0.14.0",
 		"dotenv": "^16.0.3",
+		"mysql": "^2.18.1",
+		"reflect-metadata": "^0.1.13",
 		"socket.io": "^4.7.1",
+		"typeorm": "^0.3.17",
 		"winston": "^3.8.2"
 	}
 }
