--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -7,7 +7,9 @@
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
 		"outDir": "build",
-		"lib": ["ES6", "DOM"]
+		"lib": ["ES6", "DOM"],
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
