created db schema

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
 		"dev": "nodemon --config nodemon.json src/index.ts",
 		"clean": "rimraf build logs",
 		"typeorm": "typeorm-ts-node-commonjs",
-		"migration:gen": "npm run typeorm migration:generate src/db/migrations/init -- -p -d src/db/data_source.ts",
+		"migration:gen": "npm run typeorm migration:generate -- -p -d src/db/data_source.ts",
 		"migration:run": "npm run typeorm migration:run -- -d src/db/data_source.ts"
 	},
 	"devDependencies": {
