--- a/calculations/requirements.txt
+++ b/calculations/requirements.txt
@@ -1,7 +1,15 @@
+anyio==3.7.0
+exceptiongroup==1.1.1
+fastapi==0.99.0
+idna==3.4
 numpy==1.25.0
 pandas==2.0.3
+pydantic==1.10.10
 python-dateutil==2.8.2
 pytz==2023.3
 scipy==1.11.1
 six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.7.0
 tzdata==2023.3
