added a worker to read tcp socket

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -4,6 +4,7 @@
 		"module": "commonjs",
 		"moduleResolution": "node",
 		"strict": true,
+		"allowJs": true,
 		"strictPropertyInitialization": false,
 		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
