--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==1.4.0
+asgiref==3.7.2
 asttokens==2.2.1
 astunparse==1.6.3
 backcall==0.2.0
@@ -11,6 +12,8 @@ contourpy==1.1.0
 cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
+Django==4.2.3
+djangorestframework==3.14.0
 executing==1.2.0
 flatbuffers==23.5.26
 fonttools==4.40.0
@@ -64,6 +67,7 @@ rsa==4.9
 scikit-learn==1.3.0
 scipy==1.11.1
 six==1.16.0
+sqlparse==0.4.4
 stack-data==0.6.2
 tensorboard==2.12.3
 tensorboard-data-server==0.7.1
