--- a/AI/requirements.txt
+++ b/AI/requirements.txt
@@ -13,6 +13,7 @@ cycler==0.11.0
 debugpy==1.6.7
 decorator==5.1.1
 Django==4.2.3
+django-cors-headers==4.1.0
 djangorestframework==3.14.0
 executing==1.2.0
 flatbuffers==23.5.26
